play-with-sld/kubernetes/k8s/add-env-patch.yaml
# add-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ""
spec:
  template:
    spec:
      containers:
        - name: ""
