play-with-sld/kubernetes/k8s/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  replicas: 1 
  selector:
    matchLabels:
      name: mongo
  template:
    metadata:
      labels:
        name: mongo
    spec:
      subdomain: primary
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
