play-with-sld/kubernetes/k8s/mysql.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      name: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: db
    spec:
      containers:
      - image: mysql:latest
        name: db
        ports:
        - containerPort: 3306
          name: mysql
