play-with-sld/kubernetes/k8s/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit
  labels:
    name: rabbit
spec:
  replicas: 1 
  selector:
    matchLabels:
      name: rabbit
  template:
    metadata:
      labels:
        name: rabbit
    spec:
      subdomain: primary
      containers:
      - name: rabbit
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
