play-with-sld/kubernetes/k8s/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    name: redis
spec:
  replicas: 1 
  selector:
    matchLabels:
      name: redis
  template:
    metadata:
      labels:
        name: redis
    spec:
      subdomain: primary
      containers:
      - name: redis
        image: redis
        command:
          - "redis-server"
        ports:
        - containerPort: 6379
