play-with-sld/kubernetes/k8s/sld-api-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend
  labels:
    name: api-backend
spec:
  replicas: 1 
  selector:
    matchLabels:
      name: api-backend
  template:
    metadata:
      labels:
        name: api-backend
    spec:
      subdomain: primary
      containers:
      - name: api-backend
        image: d10s0vsky/sld-api:3.0.0
        imagePullPolicy: Always
        command: ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /api/v1/
            port: 8000
            httpHeaders:
            - name: status
              value: healthy
          initialDelaySeconds: 60
          periodSeconds: 60
