play-with-sld/kubernetes/k8s/sld-dashboard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sld-dashboard
  labels:
    name: sld-dashboard
spec:
  replicas: 1 
  selector:
    matchLabels:
      name: sld-dashboard
  template:
    metadata:
      labels:
        name: sld-dashboard
    spec:
      subdomain: primary
      containers:
        - name: sld-dashboard
          image: d10s0vsky/sld-dashboard:2.26.0
          imagePullPolicy: Always
          command: ["python", "-m", "gunicorn", "--config", "gunicorn-cfg.py", "run:app"]
          ports:
            - containerPort: 5000
