play-with-sld/kubernetes/k8s/sld-worker-default.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stack-deploy-worker-default
  labels:
    name: stack-deploy-worker-default
spec:
  replicas: 1 
  selector:
    matchLabels:
      name: stack-deploy-worker-default
  template:
    metadata:
      labels:
        name: stack-deploy-worker-default
    spec:
      subdomain: primary
      containers:
        - name: stack-deploy-worker-default
          image: d10s0vsky/sld-api:2.28.0
          imagePullPolicy: Always
          command: ["python", "-m", "celery", "--app", "src.worker.tasks.terraform_worker", "worker", "--loglevel=info", "-c", "8", "-E", "-Q", "squad"]
