play-with-sld/kubernetes/k8s/sld-worker-squad2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stack-deploy-worker-squad2
  labels:
    name: stack-deploy-worker-squad2
spec:
  replicas: 1 
  selector:
    matchLabels:
      name: stack-deploy-worker-squad2
  template:
    metadata:
      labels:
        name: stack-deploy-worker-squad2
    spec:
      subdomain: primary
      containers:
        - name: stack-deploy-worker-squad2
          image: d10s0vsky/sld-api:3.0.0
          imagePullPolicy: Always
          command: ["python", "-m", "celery", "--app", "src.worker.tasks.terraform_worker", "worker", "--loglevel=info", "-c", "8", "-E", "-Q", "any,squad2"]
