play-with-sld/kubernetes/k8s/sld-api-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-backend
spec:
  type: NodePort
  selector:
    name: api-backend
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8000
      targetPort: 8000
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30003
