play-with-sld/kubernetes/k8s/sld-dashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sld-dashboard
spec:
  type: NodePort
  selector:
    name: sld-dashboard
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 5000
      targetPort: 5000
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30005
