play-with-sld/kubernetes/k8s/sld-remote-state-service.yml
apiVersion: v1
kind: Service
metadata:
  name: remote-state
spec:
  type: NodePort
  selector:
    name: remote-state
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8080
      targetPort: 8080
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30004
