play-with-sld/kubernetes/k8s/sld-schedule-service.yml
apiVersion: v1
kind: Service
metadata:
  name: schedule
spec:
  type: NodePort
  selector:
    name: schedule
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 10000
      targetPort: 10000
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
