play-with-sld/kubernetes/k8s/ingress-conf.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-sld
spec:
  rules:
  - host: sld-dashboard
    http:
      paths:
      - backend:
          serviceName: sld-dashboard
          servicePort: 5000
        path: /
  - host: sld-api
    http:
      paths:
      - backend:
          serviceName: api-backend
          servicePort: 8000
        path: /
---
